--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
             <h4 class="total_over">Total Overs:</h4>
             <h4 class="total_wicket">Total Wickets:</h4>
             <div>
-              <button class="player-btn">Player Settings</button>
               <button class="toss" onclick="DisplayToss()">Toss</button>
             </div>
           </div>
@@ -58,6 +57,7 @@
           <h4>Total Overs:</h4>
           <h4>Remaining Wickets:</h4>
           <h4>Current Runrate:</h4>
+          <div class="p1"><p>Currently Batting</p></div>
         </div>
         <div class="main__spinner">
           <div class="box" id="box">
@@ -87,6 +87,7 @@
           <h4>Remaining Balls:</h4>
           <h4>Remaining Wickets:</h4>
           <h4>Current Runrate:</h4>
+          <div class="p2"><p>Currently Batting</p></div>
         </div>
       </div>
     </main>
